--- a/index.html
+++ b/index.html
@@ -2,6 +2,31 @@
 layout: default
 title: Bryce Fisher-Fleig
 ---
-<article>
-{{ site.posts }}
+
+{% for post in paginator.posts %}
+<article class="node-article">
+  <header class="article-header">
+    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+    <datetime>{{ post.date }}</datetime>
+  </header>
+  <div class="article-content">
+    {{ post.content }}
+  </div>
 </article>
+{% endfor %}
+
+<!-- Pagination links -->
+<div class="pagination">
+  {% if paginator.previous_page %}
+    <a href="/page{{ paginator.previous_page }}" class="previous">Previous</a>
+  {% else %}
+    <span class="previous">Previous</span>
+  {% endif %}
+
+  <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+  {% if paginator.next_page %}
+    <a href="/page{{ paginator.next_page }}" class="next">Next</a>
+  {% else %}
+    <span class="next ">Next</span>
+  {% endif %}
+</div>
