--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@ title: Bryce Fisher-Fleig
 <article class="node-article">
   <header class="article-header">
     <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-    <datetime>{{ post.date }}</datetime>
+    <datetime>{{ post.date | date_to_string }}</datetime>
+    {% if post.thumbnail %}
+      <img src="{{ post.thumbnail }}" alt="" class="article-thumbnail" />
+    {% endif %}
   </header>
   <div class="article-content">
-    {{ post.content }}
+    {{ post.excerpt }}
   </div>
 </article>
 {% endfor %}
@@ -18,15 +21,12 @@ title: Bryce Fisher-Fleig
 <!-- Pagination links -->
 <div class="pagination">
   {% if paginator.previous_page %}
-    <a href="/page{{ paginator.previous_page }}" class="previous">Previous</a>
-  {% else %}
-    <span class="previous">Previous</span>
+    <a href="/blog/{{ paginator.previous_page }}" class="previous">Previous</a>
   {% endif %}
 
   <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+
   {% if paginator.next_page %}
-    <a href="/page{{ paginator.next_page }}" class="next">Next</a>
-  {% else %}
-    <span class="next ">Next</span>
+    <a href="/blog/{{ paginator.next_page }}" class="next">Next</a>
   {% endif %}
 </div>
