--- a/index.html
+++ b/index.html
@@ -3,33 +3,39 @@ layout: default
 title: "Home"
 css_id: home
 ---
-
-{% for post in paginator.posts %}
-<article class="node-article">
-  <header class="article-header">
-    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-    <datetime>{{ post.date | date_to_string }}</datetime>
-    {% if post.thumbnail %}
-      <img src="{{ post.thumbnail }}" alt="" class="article-thumbnail" />
-    {% endif %}
-  </header>
-  <div class="article-content">
-    {{ post.excerpt }}
-  </div>
-</article>
-{% endfor %}
-
-<!-- Pagination links -->
-<div class="pagination">
-  {% if paginator.previous_page and paginator.page == 2 %}
-    <a href="/" class="previous">Previous</a>
-  {% elsif paginator.previous_page %}
-    <a href="/blog/{{ paginator.previous_page }}" class="previous">Previous</a>
-  {% endif %}
-
-  <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
-
-  {% if paginator.next_page %}
-    <a href="/blog/{{ paginator.next_page }}" class="next">Next</a>
-  {% endif %}
+<div id="site-mission">
+  <h1>Bryce Fisher-Fleig</h1>
+  <p>Fullstack Forrays into Web Development</p>
 </div>
+
+<section id="main-content">
+  {% for post in paginator.posts %}
+  <article class="node-article">
+    <header class="article-header">
+      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <datetime>{{ post.date | date_to_string }}</datetime>
+      {% if post.thumbnail %}
+        <img src="{{ post.thumbnail }}" alt="" class="article-thumbnail" />
+      {% endif %}
+    </header>
+    <div class="article-content">
+      {{ post.excerpt }}
+    </div>
+  </article>
+  {% endfor %}
+
+  <!-- Pagination links -->
+  <div class="pagination">
+    {% if paginator.previous_page and paginator.page == 2 %}
+      <a href="/" class="previous">Previous</a>
+    {% elsif paginator.previous_page %}
+      <a href="/blog/{{ paginator.previous_page }}" class="previous">Previous</a>
+    {% endif %}
+
+    <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+
+    {% if paginator.next_page %}
+      <a href="/blog/{{ paginator.next_page }}" class="next">Next</a>
+    {% endif %}
+  </div>
+</section>
